changed home path

--- a/FinalProject_Villains.html
+++ b/FinalProject_Villains.html
@@ -110,7 +110,7 @@
 		<a href="FinalProject_Villains.html" >
 			<img src="villainslink-01.png" alt="Top 10 Villains" class="pagelinks">
 		</a>
-		<a href="FinalProject.html" >
+		<a href="index.html" >
 			<img src="homelink-01.png" alt="Home" class="pagelinks">
 		</a>
 		<a href="FinalProject_comments.php">
